Fix jitpack issue v3

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 
@@ -15,12 +16,11 @@ buildscript {
     }
 }
 
-plugins {}
-
 allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
